CaseCopilot/force-app/main/default/objects/AI_Interaction__c/AI_Interaction__c.object-meta.xml
<CustomObject>
    <label>AI Interaction</label>
    <pluralLabel>AI Interactions</pluralLabel>
    <nameField>
        <label>Interaction Number</label>
        <type>AutoNumber</type>
        <displayFormat>AI-{00000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>