CaseCopilot/force-app/main/default/objects/AI_Interaction__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <label>Case</label>
    <type>Lookup</type>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>AI Interactions</relationshipLabel>
    <relationshipName>AI_Interactions</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>