CaseCopilot/force-app/main/default/objects/AI_Interaction__c/fields/Interaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Interaction_Type__c</fullName>
    <label>Interaction Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Summary</fullName>
                <default>true</default>
                <label>Summary</label>
            </value>
            <value>
                <fullName>Draft Reply</fullName>
            </value>
            <value>
                <fullName>Suggested Action</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>