CaseCopilot/force-app/main/default/objects/AI_Interaction__c/fields/Prompt__c.field-meta.xml
<CustomField>
    <fullName>Prompt__c</fullName>
    <label>Prompt</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description>The exact prompt sent to the AI model — kept for audit and reproducibility.</description>
</CustomField>